# inspectnet-cx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
docs/: ABLATION.md  audit.md  benchmark_protocol.md  claims_ledger.md  latency_baseline.md  native_detector_ablations.md  native_vs_padim_bottle.md  openvino_parity_resolution.md  padim_cross_category_transfer.md  phase1_training_design.md  phase_a_eval_harness_report.md  positioning.md  posting.md  proof_status.md  public_release_audit.md  release_checklist.md  sprint2_summary.md  tensorrt_parity_rtx5070.md  threshold_analysis_padim_bottle.md  threshold_analysis_padim_multi_category.md
reports/: README.md  bootstrap_padim_bottle.json  bootstrap_padim_cable.json  bootstrap_padim_capsule.json  bootstrap_padim_leather.json  bootstrap_phase1_recon_bottle.json  bootstrap_phase1_recon_cable.json  cross_padim_bottle_to_cable.json  cross_padim_bottle_to_capsule.json  cross_padim_bottle_to_leather.json  cross_padim_cable_to_bottle.json  cross_padim_cable_to_capsule.json  cross_padim_cable_to_leather.json  cross_padim_capsule_to_bottle.json  cross_padim_capsule_to_cable.json  cross_padim_capsule_to_leather.json  cross_padim_leather_to_bottle.json  cross_padim_leather_to_capsule.json  cross_padim_matrix.json  scores_padim_bottle.json  scores_padim_cable.json  scores_padim_capsule.json  scores_padim_leather.json  scores_phase1_recon_bottle.json  scores_phase1_recon_cable.json  threshold_analysis_padim_bottle.json  threshold_analysis_padim_cable.json  threshold_analysis_padim_capsule.json  threshold_analysis_padim_leather.json
requirements/: verified.txt
scripts/: aggregate_results.py  bench_latency.py  benchmark_latency.py  bootstrap_auroc.py  build_cross_transfer_matrix.py  calibrate_normal_threshold.py  check_datasets.py  check_hf_package.py  check_proof_readiness.py  create_phase0_model.py  cross_category_padim.py  download_mvtec.py  eval_harness.py  eval_phase1_recon.py  export_phase0.py  investigate_anomalib_export.py  investigate_openvino_parity.py  predict_anomaly.py  release_smoke.py  run_anomalib_baseline.py  run_baseline.py  run_classical_baseline.py  run_fixture_smoke.py  run_inference.py  score_anomalib_test.py  threshold_analysis.py  train_inspectnet_cx.py  train_patchcore.py  train_phase1_recon.py  validate_padim_export.py  validate_patchcore_export.py  validate_results.py
tests/: test_batch_inference.py  test_bootstrap_auroc.py  test_calibration.py  test_classical_baseline.py  test_config.py  test_dataset_check.py  test_eval_harness.py  test_eval_helpers.py  (+19 more)
(+141 files in other folders)
