[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspectnet-cx"
version = "0.0.1"
description = "HF-style industrial visual anomaly detection scaffold with proof-oriented baselines."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "InspectNet-CX contributors" }]
dependencies = [
  "torch>=2.4",
  "transformers>=4.44",
  "pillow>=10.0",
  "numpy>=1.24",
  "packaging>=24.0",
  "scikit-learn>=1.4",
]

[project.scripts]
inspectnet-baseline = "inspectnet_cx.eval.baseline:main"
inspectnet-classical-baseline = "inspectnet_cx.eval.classical_baseline:main"
inspectnet-aggregate = "inspectnet_cx.eval.aggregate:main"
inspectnet-anomalib-baseline = "inspectnet_cx.eval.anomalib_baseline:main"
inspectnet-create-phase0-model = "inspectnet_cx.release.create_phase0_model:main"
inspectnet-calibrate-normal-threshold = "inspectnet_cx.calibration.normal_split:main"
inspectnet-threshold-analysis = "inspectnet_cx.calibration.threshold_analysis_cli:main"
inspectnet-dataset-check = "inspectnet_cx.data.dataset_check:main"
inspectnet-export = "inspectnet_cx.export.phase0:main"
inspectnet-fixture-smoke = "inspectnet_cx.eval.fixture_smoke:main"
inspectnet-infer = "inspectnet_cx.inference:main"
inspectnet-infer-batch = "inspectnet_cx.batch_inference:main"
inspectnet-latency = "inspectnet_cx.eval.latency:main"
inspectnet-predict = "inspectnet_cx.prediction_cli:main"
inspectnet-proof-readiness = "inspectnet_cx.eval.proof_readiness:main"
inspectnet-space = "inspectnet_cx.space.app:main"
inspectnet-validate-results = "inspectnet_cx.eval.validate_results:main"
inspectnet-train-phase1 = "inspectnet_cx.training.phase1:main"

[project.optional-dependencies]
baseline = [
  "anomalib==2.4.1",
  "timm==1.0.26",
  "torchvision==0.26.0",
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.6",
]
export = [
  "onnx==1.21.0",
  "onnxruntime==1.23.2",
  "onnxscript==0.7.0",
  "openvino==2026.1.0",
]
space = [
  "gradio==6.14.0",
]
all = [
  "anomalib==2.4.1",
  "build>=1.2",
  "gradio==6.14.0",
  "onnx==1.21.0",
  "onnxruntime==1.23.2",
  "onnxscript==0.7.0",
  "openvino==2026.1.0",
  "pytest>=8.0",
  "ruff>=0.6",
  "scikit-learn>=1.4",
  "timm==1.0.26",
  "torchvision==0.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["RUF012"]
